[emacs] Rework completing read functions

--- a/emacs.org
+++ b/emacs.org
@@ -273,7 +273,8 @@ latest org before loading org.
   ;;; Code:
 
   (eval-when-compile
-    (require 'subr-x))
+    (require 'subr-x)
+    (require 'cl-generic))
   (require 'seq)
 
   ;;; Configuration variables
@@ -500,6 +501,43 @@ latest org before loading org.
        (rx line-start alpha (zero-or-more (any alnum "+-.")) ":") s)))
 
   ;;; Completion subroutines
+
+  (defun koek-subr/construct-label (prefix occurrence)
+    (let ((n (1- occurrence)))
+      (if (= n 0)
+          prefix
+        (format "%s (%d)" prefix n))))
+
+  (defun koek-subr/make-labeler (&optional construct-label)
+    (let ((construct-label (or construct-label #'koek-subr/construct-label))
+          (occurrences (make-hash-table :test #'equal)))
+      (lambda (prefix)
+        (let ((occurrence (1+ (gethash prefix occurrences 0))))
+          (puthash prefix occurrence occurrences)
+          (funcall construct-label prefix occurrence)))))
+
+  (cl-defgeneric koek-subr/attach-objects (associations)
+    "Attach objects to names.
+  ASSOCIATIONS is a collection of name to object pairs.  Name is a
+  string.  Object is any object.  For detaching object from name,
+  see `koek-subr/detach-object'.")
+
+  (cl-defmethod koek-subr/attach-objects ((associations list))
+    (mapcar (pcase-lambda (`(,name . ,object))
+              (propertize name 'koek-object object))
+            associations))
+
+  (cl-defmethod koek-subr/attach-objects ((associations hash-table))
+    (let ((names nil))
+      (maphash (lambda (name object)
+                 (push (propertize name 'koek-object object) names))
+               associations)
+      (reverse names)))
+
+  (defun koek-subr/detach-object (name)
+    "Detach object from NAME.
+  NAME is a string, the name to detach object from."
+    (get-text-property 0 'koek-object name))
 
   (defmacro koek-subr/enrich (candidates &rest metadata-pairs)
     "Enrich CANDIDATES with metadata."
@@ -1563,37 +1601,40 @@ something short.
   (defvar koek-xde/entry-history nil
     "History of entry names read.")
 
-  (defun koek-xde/read-id (prompt)
+  (defun koek-xde/read-id
+      (prompt &optional predicate require-match initial-input def inherit-input-method)
     (let* ((entries (koek-xde/get-entries))
            (categories (koek-xde/read-categories))
            (candidates (let ((candidates (make-hash-table :test #'equal)))
-                         (maphash
-                          (lambda (id entry)
-                            (puthash (gethash "Name" entry)
-                                     (list :id id
-                                           :category (gethash id categories)
-                                           :description (gethash "Comment" entry))
-                                     candidates))
-                          entries)
+                         (maphash (lambda (id entry)
+                                    (puthash (gethash "Name" entry)
+                                             (list :id id
+                                                   :category (gethash id categories)
+                                                   :entry entry)
+                                             candidates))
+                                  entries)
                          candidates))
-           (table (koek-subr/enrich candidates
-                    category 'xdg-desktop-entry
-                    group-function
-                    (lambda (candidate transform)
-                      (if transform
-                          candidate
-                        (or (plist-get (gethash candidate candidates) :category)
-                            "Uncategorized")))
-                    annotation-function
-                    (lambda (candidate)
-                      (when-let ((description
-                                  (plist-get (gethash candidate candidates)
-                                             :description)))
-                        (concat " " description))))))
-      (thread-first
-        (completing-read prompt table nil t nil 'koek-xde/entry-history)
-        (gethash candidates)
-        (plist-get :id))))
+           (table
+            (koek-subr/enrich (koek-subr/attach-objects candidates)
+              category 'xdg-desktop-entry
+              group-function
+              (lambda (candidate transform)
+                (if transform
+                    candidate
+                  (or (plist-get (koek-subr/detach-object candidate) :category)
+                      "*No category*")))
+              annotation-function
+              (lambda (candidate)
+                (when-let* ((entry (plist-get (koek-subr/detach-object candidate)
+                                              :entry))
+                            (description (gethash "Comment" entry)))
+                  (concat " " description)))))
+           (key (completing-read
+                 prompt table predicate require-match initial-input
+                 'koek-xde/entry-history def inherit-input-method)))
+      (if-let ((value (gethash key candidates)))
+          (plist-get value :id)
+        key)))
 
   (defun koek-xde/launch (id &rest uris)
     ;; default-directory
@@ -1608,7 +1649,7 @@ something short.
   (defvar koek-xde/browser-id "firefox")
 
   (defun koek-xde/launch-app (id)
-    (interactive (list (koek-xde/read-id "Launch: ")))
+    (interactive (list (koek-xde/read-id "Launch: " nil t)))
     (koek-xde/launch id))
 
   (defun koek-xde/launch-file-manager ()
@@ -2488,7 +2529,7 @@ minibuffer.
     (defun koek-mbrk/visit-with-app (uri id)
       (interactive
        (let* ((uri (read-string "URI: "))
-              (id (koek-xde/read-id (format "Visit `%s' with: " uri))))
+              (id (koek-xde/read-id (format "Visit `%s' with: " uri) nil t)))
          (list uri id)))
       (koek-xde/launch id uri))
 
@@ -2717,7 +2758,8 @@ minibuffer.
     (defvar koek-bmrk/generic-url-history nil
       "History of generic URL titles read.")
 
-    (defun koek-bmrk/read-generic-url (prompt)
+    (defun koek-bmrk/read-generic-url
+        (prompt &optional predicate require-match initial-input def inherit-input-method)
       (require 'bookmark)
       (bookmark-maybe-load-default-file)
       (let* ((candidates (seq-filter (lambda (bookmark)
@@ -2726,7 +2768,8 @@ minibuffer.
                                      bookmark-alist))
              (table (koek-subr/enrich candidates
                       category 'bookmark)))
-        (completing-read prompt table nil t nil 'koek-bmrk/generic-url-history)))
+        (completing-read prompt table predicate require-match initial-input
+                         'koek-bmrk/generic-url-history def inherit-input-method)))
     :config
     (setq bookmark-default-file
           (no-littering-expand-etc-file-name "bookmark-default.el"))
@@ -6316,7 +6359,7 @@ For shell configuration, see [[file:dotfiles.org::*Bash][Bash]].
         (eww (bookmark-get-filename bookmark))))
 
     (defun koek-eww/jump-bookmark (bookmark)
-      (interactive (list (koek-bmrk/read-generic-url "Bookmark: ")))
+      (interactive (list (koek-bmrk/read-generic-url "Bookmark: " nil t)))
       (let ((koek-bmrk/handle-generic-url-f ; Dynamic variable
              #'koek-eww/handle-eww))
         (bookmark-jump bookmark)))
@@ -6624,23 +6667,31 @@ To show birthdays as agenda entries, see [[info:org#Weekly/daily agenda][Anniver
     (defvar koek-bbdb/email-history nil
       "History of e-mail addresses read.")
 
-    (defun koek-bbdb/read-email (prompt)
-      (let* ((candidates (seq-mapcat (lambda (record)
-                                       (mapcar (lambda (email)
-                                                 (cons email record))
-                                               (bbdb-record-mail record)))
-                                     (bbdb-records)))
-             (table (koek-subr/enrich candidates
-                      category 'email
-                      annotation-function
-                      (lambda (candidate)
-                        (when-let ((name (thread-first
-                                           candidate
-                                           (assoc candidates)
-                                           cdr
-                                           bbdb-record-name)))
-                          (concat " " name))))))
-        (completing-read prompt table nil t nil 'koek-bbdb/email-history)))
+    (defun koek-bbdb/read-email
+        (prompt &optional predicate require-match initial-input def inherit-input-method)
+      (let* ((deduplicate (koek-subr/make-labeler))
+             (candidates (seq-mapcat
+                          (lambda (record)
+                            (mapcar (lambda (email)
+                                      (cons (funcall deduplicate email)
+                                            (list :email email :record record)))
+                                    (bbdb-record-mail record)))
+                          (bbdb-records)))
+             (table
+              (koek-subr/enrich (koek-subr/attach-objects candidates)
+                category 'email
+                annotation-function
+                (lambda (candidate)
+                  (when-let* ((record (plist-get (koek-subr/detach-object candidate)
+                                                 :record))
+                              (name (bbdb-record-name record)))
+                    (concat " " name)))))
+             (key (completing-read
+                   prompt table predicate require-match initial-input
+                   'koek-bbdb/email-history def inherit-input-method)))
+        (if-let ((value (cdr (assoc key candidates))))
+            (plist-get value :email)
+          key)))
 
     (defun koek-bbdb/display-email (email)
       (interactive (list (koek-bbdb/read-email "E-mail: ")))
