[emacs] Prefer assoc to alist-get when key is of type string

--- a/emacs.org
+++ b/emacs.org
@@ -939,8 +939,7 @@ b3n (Reddit)]]. For the Firefox add-on, see [[file:dotfiles.org::*KeePass Helper
     (defun koek-wm/get-app-name (&optional buffer nick)
       (when-let*
           ((class (koek-wm/get-class buffer))
-           (names
-            (alist-get class koek-wm/app-names nil nil #'koek-wm/like-class-p)))
+           (names (cdr (assoc class koek-wm/app-names #'koek-wm/like-class-p))))
         (or (and nick (cadr names)) (car names))))
 
     (defun koek-wm/get-firefox-page ()
