[emacs] Add LG and Philips identifiers

--- a/emacs.org
+++ b/emacs.org
@@ -1180,7 +1180,9 @@ For monitors and monitor layouts, see [[*Monitors][Monitors]].
 
   (defvar exar-manufacturers
     '(("AUO" . "AU Optronics Corp.")
-      ("MJI" . "Marantz Japan Inc.")))
+      ("GSM" . "LG Corp.")
+      ("MJI" . "Marantz Japan Inc.")
+      ("PHL" . "Koninklijke Philips N.V.")))
 
   (defconst exar--x:True 1)
   (defconst exar--x:False 0)
