[emacs] Place mu4e buffers

--- a/emacs.org
+++ b/emacs.org
@@ -1996,11 +1996,12 @@ Bury unneeded buffers, computers have more than enough memory.
                       "*vterm*"
                       "*eshell*"
                       "*Proced*"
+                      "*mu4e-main*"
                       "*view-src"
                       "*org-src"))
              . ((display-buffer-reuse-window display-buffer-same-window)))
             ;; Below selected
-            (,(rx line-start (or " *transient*" "*Calendar*"))
+            (,(rx line-start (or " *transient*" " *mu4e-update*" "*Calendar*"))
              . (display-buffer-below-selected))
             ;; Top
             (,(rx line-start
