[emacs] Move custom transient mode line to koek-ml package

--- a/emacs.org
+++ b/emacs.org
@@ -3144,26 +3144,6 @@ VC configuration is a stub.
                      (show-lines   . t)))))
     (setq magit-blame-echo-style 'line))
 
-  (use-package transient
-    :defer t
-    :preface
-    (defvar koek-ml/transient-format)
-
-    (defvar koek-tsnt/old-mode-line-format nil)
-
-    (defun koek-tsnt/setup-mode-line ()
-      (when (featurep 'koek-ml)
-        (if koek-ml-mode
-            (progn
-              (unless (eq transient-mode-line-format koek-ml/transient-format)
-                (setq koek-tsnt/old-mode-line-format transient-mode-line-format))
-              (setq transient-mode-line-format koek-ml/transient-format))
-          (setq transient-mode-line-format koek-tsnt/old-mode-line-format)
-          (setq koek-tsnt/old-mode-line-format nil))))
-    :config
-    (koek-tsnt/setup-mode-line)
-    (add-hook 'koek-ml-mode-hook #'koek-tsnt/setup-mode-line))
-
   (use-package git-commit
     :defer t
     :preface
@@ -9367,6 +9347,9 @@ can load moody.
 
   ;;;; transient
 
+  (defvar koek-ml-mode)
+  (defvar transient-mode-line-format)
+
   (defvar koek-ml/transient-format
     '(" "
       (:eval
@@ -9377,6 +9360,24 @@ can load moody.
       koek-ml/large-separator
       koek-ml/modes))
   (put 'koek-ml/transient-format 'risky-local-variable t)
+
+  (defvar koek-ml/old-transient-format nil)
+
+  (defun koek-ml/setup-transient ()
+    (if koek-ml-mode
+        (progn
+          (unless (eq transient-mode-line-format koek-ml/transient-format)
+            (setq koek-ml/old-transient-format transient-mode-line-format))
+          (setq transient-mode-line-format koek-ml/transient-format))
+      (when koek-ml/old-transient-format
+        (setq transient-mode-line-format koek-ml/old-transient-format)
+        (setq koek-ml/old-transient-format nil))))
+
+  (eval-after-load 'transient #'koek-ml/setup-transient)
+
+  (defun koek-ml/maybe-setup-transient ()
+    (when (featurep 'transient)
+      (koek-ml/setup-transient)))
 
   ;;;; ediff
 
@@ -9513,6 +9514,7 @@ can load moody.
       (remove-hook 'ediff-cleanup-hook #'koek-ml/cleanup-variants)
       (advice-remove 'calendar-set-mode-line #'koek-ml/setup-calendar)
       (advice-remove 'calendar-update-mode-line #'koek-ml/update-calendar))
+    (koek-ml/maybe-setup-transient)
     (force-mode-line-update 'all))
 
   (provide 'koek-ml)
