--- a/emacs.org
+++ b/emacs.org
@@ -6526,9 +6526,8 @@ For e-mail accounts, see [[*E-mail accounts][E-mail accounts]].
 
   (use-package mu4e-search
     :defer t
+    :autoload mu4e-search
     :preface
-    (autoload #'mu4e-search "mu4e-search")
-
     (defun koek-mu4e/display-messages-to (email)
       (interactive (list (koek-bbdb/read-email "To: ")))
       (mu4e-search (mapconcat (lambda (field)
@@ -6739,10 +6738,8 @@ To show birthdays as agenda entries, see [[info:org#Weekly/daily agenda][Anniver
   (use-package bbdb-vcard
     :ensure t
     :after bbdb
+    :autoload (bbdb-vcard-import-vcard bbdb-vcard-iterate-vcards)
     :preface
-    (autoload #'bbdb-vcard-import-vcard "bbdb-vcard")
-    (autoload #'bbdb-vcard-iterate-vcards "bbdb-vcard")
-
     (defun koek-bbdb/import-dir (file-name &optional interactive)
       "Import vCards from directory FILE-NAME and its subdirectories.
   Treats every vCard as a distinct contact.  INTERACTIVE is used
