--- a/emacs.org
+++ b/emacs.org
@@ -6761,6 +6761,17 @@ To show birthdays as agenda entries, see [[info:org#Weekly/daily agenda][Anniver
     (setq bbdb-pop-up-window-size t)
     (setq bbdb-mua-pop-up-window-size t)
 
+    (setq bbdb-layout-alist
+          '((one-line . ((toggle   . t)
+                         (order    . (phone mail))
+                         (name-end . 20)))
+            (multi-line . ((toggle      . t)
+                           (order       . (address phone mail birthday notes))
+                           (indentation . 20)))
+            (full-multi-line . ((toggle      . t)
+                                (order       . (address phone mail birthday notes t))
+                                (indentation . 20)))))
+
     (bbdb-initialize 'mu4e 'message))
 
   (use-package bbdb-com
