[emacs] Fix import vCard organization

--- a/emacs.org
+++ b/emacs.org
@@ -6788,6 +6788,12 @@ To show birthdays as agenda entries, see [[info:org#Weekly/daily agenda][Anniver
     :after bbdb
     :autoload (bbdb-vcard-import-vcard bbdb-vcard-iterate-vcards)
     :preface
+    (define-advice bbdb-vcard-unvcardize-org
+        (:around (f vcard-org) koek-bbdb/format-vcard-organization)
+      (if (consp vcard-org)
+          (string-join (remq nil vcard-org) ";") ; bbdb-separator-alist
+        (funcall f vcard-org)))
+
     (defun koek-bbdb/import-dir (file-name &optional interactive)
       "Import vCards from directory FILE-NAME and its subdirectories.
   Treats every vCard as a distinct contact.  INTERACTIVE is used
