[emacs] Fix koek-pdf/stain-mode

--- a/emacs.org
+++ b/emacs.org
@@ -7035,7 +7035,7 @@ Gnus configuration is a stub.
       "Stain document."
       (pdf-info-setoptions :render/foreground (car pdf-view-midnight-colors)
                            :render/background (cdr pdf-view-midnight-colors)
-                           :render/usecolors t)
+                           :render/usecolors 1)
       (koek-pdf/redraw-hard))
 
     ;; `pdf-view-midnight-minor-mode' is difficult to extend
